fix: remove proxy, safetybox (#832)
fix: remove proxy, safetybox
